# qwin

./: 2.diff  3.diff  4.diff  5.diff  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
config/: config.json
include/: server_emulator.h  steam.h  udp_proxy.h  utils.h
modules_1/: CMakeLists.txt  config.json
modules_1/include/: server_emulator.h  utils.h
modules_1/src/: main.cpp  server_emulator.cpp  utils.cpp
patch/: 1.diff  block_ip.diff  chelenge_key.diff  config_game.diff  main_cpp.diff  update_stats.diff
script/: clean_logs.sh  manage.sh
src/: main.cpp  server_emulator.cpp  steam.cpp  udp_proxy.cpp  utils.cpp
